--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ header #social {
     top: 40px;
     right: 15px;
 }
-header #social img{
+header #social i{
     width: 15px;
     float: left;
     margin: 5px;
@@ -62,13 +62,14 @@ header nav ul li {
     margin: 21px;
     position: relative;
     bottom: 10px;
-    
-    
 }
 a:link {
     color: #38462b;
     font-family: 'lato', sans-serif; 
     text-decoration: none;
+}
+a:visited{
+    color:rgb(121, 38, 73);
 }
 a:hover {
     color:#eef9e8;
@@ -76,8 +77,7 @@ a:hover {
 #banner{ 
     position: relative;
     top: 150px;
-    text-align: center;
-    
+    text-align: center;   
 }
 #banner img {
     width: 80%;
@@ -114,6 +114,9 @@ h3{
     position: relative;
     top: 40px;
 }
+#home #location a:hover{
+    color: #3d3626;
+}
 #consultation {
     width: 100%;
     position: relative;
@@ -146,20 +149,17 @@ footer {
     top:30px;
     right: 80px;
 }
-#sfoot img {
+#sfoot i{
     width: 15px;
     float: left;
     margin: 5px;
 }
-#footlogo {
-    position: relative;
-    top: 10px;
-}
 #footlogo img {
     width: 130px;
     float: right;
-    position: relative;
+    position: fixed;
     right:15px;
+    bottom:20px;
 }
 p.indent{
     text-indent: 30px;
